# requru

./: .gitignore  nordvpn.py  proxyrack.py  pyproject.toml  requru.ipynb  session.py
src/: test.ipynb
src/requru/: .env  nordvpn.py  proxy_provider.py  proxyrack.py  request.py  session.py
src/requru.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
