[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "requru"
version = "0.0.1"
authors = [
    { name="Vicente Valencia", email="vmvalencian@gmail.com" },
]
description = "A strong requests package"
requires-python = ">=3.11"
dependencies = [
    "requests"
]

